--- a/src/app/hello-world/hello-world.component.css
+++ b/src/app/hello-world/hello-world.component.css
@@ -1,11 +1,22 @@
 img {
   width: 100%;
 }
-p {
-  margin-right: 10px;
-}
+
 .helloInputDiv {
   display: flex;
-  align-content: center;
-  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.helloInputDiv p,
+.helloInputDiv input {
+  margin: 0;
+  line-height: 1;
+  font-size: 16px;
+}
+
+.helloInputDiv input {
+  height: auto;
 }
