--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -20,4 +20,7 @@
   <button mat-menu-item>
     <a routerLink="/feedback" routerLinkActive="active"> Feedback</a>
   </button>
+  <button mat-menu-item>
+    <a routerLink="/template" routerLinkActive="active"> Template driven form</a>
+  </button>
 </mat-menu>
