--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -23,4 +23,7 @@
   <button mat-menu-item>
     <a routerLink="/template" routerLinkActive="active"> Template driven form</a>
   </button>
+  <button mat-menu-item>
+    <a routerLink="/reactive" routerLinkActive="active"> Reactive form</a>
+  </button>
 </mat-menu>
