--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -11,19 +11,22 @@
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>
-    <a routerLink="/hello" routerLinkActive="active"> Home</a>
-  </button>
-  <button mat-menu-item>
-    <a routerLink="/calculator" routerLinkActive="active"> Calculator</a>
-  </button>
-  <button mat-menu-item>
-    <a routerLink="/feedback" routerLinkActive="active"> Feedback</a>
-  </button>
-  <button mat-menu-item>
-    <a routerLink="/template" routerLinkActive="active"> Template driven form</a>
-  </button>
-  <button mat-menu-item>
-    <a routerLink="/reactive" routerLinkActive="active"> Reactive form</a>
-  </button>
+  <a routerLink="/hello" routerLinkActive="active">
+    <button mat-menu-item>Home</button></a
+  >
+  <a routerLink="/calculator" routerLinkActive="active">
+    <button mat-menu-item>Calculator</button></a
+  >
+  <a routerLink="/feedback" routerLinkActive="active">
+    <button mat-menu-item>Feedback</button></a
+  >
+  <a routerLink="/template" routerLinkActive="active">
+    <button mat-menu-item>Template driven form</button></a
+  >
+  <a routerLink="/reactive" routerLinkActive="active">
+    <button mat-menu-item>Reactive form</button></a
+  >
+  <a routerLink="/news-list" routerLinkActive="active">
+    <button mat-menu-item>Finnkino</button></a
+  >
 </mat-menu>
