Reititys admin-näkymään

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -29,4 +29,7 @@
   <a routerLink="/news-list" routerLinkActive="active">
     <button mat-menu-item>Finnkino</button></a
   >
+  <a routerLink="/login" routerLinkActive="active">
+    <button mat-menu-item>Admin view</button></a
+  >
 </mat-menu>
