--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,42 @@
+mat-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+mat-toolbar button {
+  margin: 0 8px;
+}
+
+mat-toolbar .menu-button {
+  margin-right: 8px;
+}
+
+mat-toolbar .title {
+  flex: 0 1 auto;
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+mat-toolbar .spacer {
+  flex: 1 1 auto;
+}
+
+button {
+  margin-left: 8px;
+}
+
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
+}
+
+mat-button a {
+  color: black;
+}
+
+mat-raised-button a {
+  color: white;
 }
